never copy to  out put on BlazorAgGrid csproject

--- a/src/BlazorAgGrid/BlazorAgGrid.csproj
+++ b/src/BlazorAgGrid/BlazorAgGrid.csproj
@@ -23,4 +23,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\blazor-ag-grid.js">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
